--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,12 @@
         </plugins>
     </build>
     <dependencies>
+
+      <dependency>
+            <groupId>net.logstash.logback</groupId>
+            <artifactId>logstash-logback-encoder</artifactId>
+            <version>5.3</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
