--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,29 +1,31 @@
-http.proxy: http://webproxy-nais.nav.no:8088
 
-info.app:
-  version: '@project.version@'
-  build.time:  '@timestamp@'
+http.proxy : http://webproxy-nais.nav.no:8088
+
+info.app :
+    version : '@project.version@'
+    build.time : '@timestamp@'
 
 management:
-  endpoints.web.exposure.include:  info, health, metrics, prometheus
-  health:
-    diskspace.enabled: false
-    jms.enabled: false
+    metrics.web.server.auto-time-requests : true
+    endpoints.web.exposure.include:  info, health, metrics, prometheus
+    health :
+      diskspace.enabled: false
+      jms.enabled: false
+      
+server :
+    servlet.context-path :  /api
+    use-forward-headers: true
 
-server.servlet:
-  context-path:  /api
-  use-forward-headers: true
-
-spring:
-  application.name: fpinfo-historikk
-  jackson:
-    default-property-inclusion:  NON_NULL
-    mapper:
-      accept_case_insensitive_properties: true
-    deserialization:
-      accept_single_value_as_array: true
-      fail-on-unknown-properties: true
-    serialization:
-      fail-on-empty-beans: false
-  main.banner-mode: 'off'
-  metrics.web.server.auto-time-requests: true
+spring :
+    application.name : fpinfo-historikk
+    jackson :
+      default-property-inclusion :  non-absent
+      mapper :
+         accept-case-insensitive-properties: true
+      deserialization :
+         accept-single-value-as-array: true
+         fail-on-unknown-properties: true
+      serialization :
+         write-empty-json-arrays: false
+         fail-on-empty-beans: false
+    main.banner-mode : 'off'
