--- a/nais.yaml
+++ b/nais.yaml
@@ -25,6 +25,9 @@ resources:
       cpu: 250m
       memory: 1536Mi
 fasitResources:
+  used:
+    - alias : FPINFOHISTORIKK_PROPERTIES
+      resourceType: applicationProperties
   exposed:
     - alias: fpsoknad-historikk-api
       resourceType: restservice
