--- a/src/main/resources/application-preprod.yaml
+++ b/src/main/resources/application-preprod.yaml
@@ -4,3 +4,4 @@ management :
      health.show-details : always
      
 spring.http.log-request-details : true
+spring.datasource.url : postgresql://b27dbvl007.preprod.local:5432/fpinfo-historikk-preprod
