--- a/src/main/resources/bootstrap.yaml
+++ b/src/main/resources/bootstrap.yaml
@@ -1,9 +1,8 @@
 spring :
    cloud.vault:
       host: vault.adeo.no
-      port: 8200
       scheme: https
-      uri: https://vault.adeo.no:8200
+      uri: https://vault.adeo.no
       database:
            enabled: true
            role: fpinfo-historikk-preprod-admin
