--- a/src/main/resources/bootstrap.yaml
+++ b/src/main/resources/bootstrap.yaml
@@ -9,8 +9,4 @@ spring :
            backend: postgresql/preprod-fss
            username-property: spring.datasource.username
            password-property: spring.datasource.password
-      authentication: KUBERNETES
-      kubernetes:
-           role: fpinfo-historikk
-           kubernetes-path: kubernetes/preprod/fss
-           service-account-token-file: /var/run/secrets/kubernetes.io/serviceaccount/token
+      authentication: TOKEN   
