--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -1,7 +1,5 @@
 spring :
    cloud.vault:
-      host: vault.adeo.no
-      scheme: https
       uri: https://vault.adeo.no
       database:
            enabled: true
@@ -13,4 +11,9 @@ spring :
       kubernetes:
            role: fpinfo-historikk
            kubernetes-path: kubernetes/preprod/fss
-           service-account-token-file: /var/run/secrets/kubernetes.io/serviceaccount/token
+           service-account-token-file: /var/run/secrets/kubernetes.io/serviceaccount/token        
+      generic:
+          enabled: true
+          backend: kv/preprod/fss #This path is cluster specific.
+          application-name: fpinfo-historikk/default #Change "default to t10, q1 etc"
+          default-context: fpinfo-historikk/default 
