--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,7 +15,10 @@ management:
 server :
     servlet.context-path :  /api
     use-forward-headers: true
-spring:    
+spring:
+   flyway:
+      locations : classpath:db/migration/{vendor} 
+      enabled : true    
    application.name : fpinfo-historikk
    jackson :
        default-property-inclusion :  non-absent
