--- a/nais.yaml
+++ b/nais.yaml
@@ -26,6 +26,10 @@ resources:
       memory: 1536Mi
 fasitResources:
   used:
+    - alias: srvfpinfo-historikk
+      resourceType: credential
+      propertyMap:
+        password: kafka_password
     - alias : FPINFOHISTORIKK_PROPERTIES
       resourceType: applicationProperties
   exposed:
