--- a/src/main/resources/application-preprod.yaml
+++ b/src/main/resources/application-preprod.yaml
@@ -3,5 +3,21 @@ management :
    endpoint:
      health.show-details : always
      
-spring.http.log-request-details : true
-spring.datasource.url : jdbc:postgresql://b27dbvl007.preprod.local:5432/fpinfo-historikk-preprod
+spring :
+   http.log-request-details : true
+   datasource.url : jdbc:postgresql://b27dbvl007.preprod.local:5432/fpinfo-historikk-preprod
+   kafka:
+      security.protocol : SASL_SSL
+      sasl :
+         mechanism : PLAIN
+         jaas.config : org.apache.kafka.common.security.scram.ScramLoginModule required username=srvfpinfo-historikk password=${kafka.password}
+      consumer:
+         bootstrap-servers: b27apvl00045.preprod.local:8443
+         group-id: group_id 
+         auto-offset-reset: earliest
+         key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+         value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      producer:
+         bootstrap-servers: b27apvl00045.preprod.local:8443
+         key-serializer: org.apache.kafka.common.serialization.StringSerializer
+         value-serializer: org.apache.kafka.common.serialization.StringSerializer
