--- a/src/main/resources/application-preprod.yaml
+++ b/src/main/resources/application-preprod.yaml
@@ -7,9 +7,11 @@ spring :
    http.log-request-details : true
    datasource.url : jdbc:postgresql://b27dbvl007.preprod.local:5432/fpinfo-historikk-preprod
    kafka:   
-      properties.security.protocol : SASL_SSL
-      properties.sasl.mechanism : PLAIN
-      properties.sasl.jaas.config : org.apache.kafka.common.security.scram.ScramLoginModule required username=srvfpinfo-historikk password=@kafka.password@
+      properties :
+         jalla : '@kafka.password@'
+         security.protocol : SASL_SSL
+         sasl.mechanism : PLAIN
+         sasl.jaas.config : org.apache.kafka.common.security.scram.ScramLoginModule required username=srvfpinfo-historikk password='@kafka.password@'
       consumer: 
         bootstrap-servers: b27apvl00045.preprod.local:8443
         group-id: group_id 
