--- a/src/main/resources/application-preprod.yaml
+++ b/src/main/resources/application-preprod.yaml
@@ -10,7 +10,7 @@ spring :
       properties :
          security.protocol : SASL_SSL
          sasl.mechanism : PLAIN
-         sasl.jaas.config : org.apache.kafka.common.security.scram.ScramLoginModule required username=srvfpinfo-historikk password='@kafka.password@'
+         sasl.jaas.config : org.apache.kafka.common.security.scram.ScramLoginModule required username=srvfpinfo-historikk password=@kafka.password@
       consumer: 
         bootstrap-servers: b27apvl00045.preprod.local:8443
         group-id: group_id 
