--- a/src/main/resources/application-preprod.yaml
+++ b/src/main/resources/application-preprod.yaml
@@ -9,15 +9,16 @@ spring :
    kafka:   
       properties :
          security.protocol : SASL_SSL
-         sasl.mechanism : PLAIN
-         sasl.jaas.config : org.apache.kafka.common.security.scram.ScramLoginModule required username=srvfpinfo-historikk password=${kafka.password}
+         sasl : 
+            mechanism : PLAIN
+            jaas.config : org.apache.kafka.common.security.scram.ScramLoginModule required username=srvfpinfo-historikk password=${kafka.password}
       consumer: 
-        bootstrap-servers: b27apvl00045.preprod.local:8443
+        bootstrap-servers: b27apvl00045.preprod.local:8443,b27apvl00046.preprod.local:8443,b27apvl00046.preprod.local:8443
         group-id: group_id 
         auto-offset-reset: earliest
         key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
         value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       producer:
-        bootstrap-servers: b27apvl00045.preprod.local:8443
+        bootstrap-servers: b27apvl00045.preprod.local:8443,b27apvl00046.preprod.local:8443,b27apvl00046.preprod.local:8443
         key-serializer: org.apache.kafka.common.serialization.StringSerializer
         value-serializer: org.apache.kafka.common.serialization.StringSerializer
