--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,10 @@
 		</dependencies>
 	</dependencyManagement>
 	<dependencies>
+	 <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
 		<dependency>
 			<groupId>org.springframework.kafka</groupId>
 			<artifactId>spring-kafka</artifactId>
