--- a/src/main/resources/application-preprod.yaml
+++ b/src/main/resources/application-preprod.yaml
@@ -4,6 +4,7 @@ management :
      health.show-details : always
      
 spring :
+   jpa.hibernate.ddl-auto : none
    http.log-request-details : true
    datasource.url : jdbc:postgresql://b27dbvl007.preprod.local:5432/fpinfo-historikk-preprod
    kafka:   
