defer flyway migrations

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,6 +18,7 @@ server :
 spring:
    jpa.hibernate.ddl-auto : none
    flyway:
+      baselineOnMigrate : true
       enabled : true    
    application.name : fpinfo-historikk
    jackson :
