--- a/src/main/resources/application-preprod.yaml
+++ b/src/main/resources/application-preprod.yaml
@@ -5,7 +5,7 @@ management :
      
 spring :
    flyway:
-      enabled : false  
+      enabled : true  
    jpa.hibernate.ddl-auto : none
    http.log-request-details : true
    datasource.url : jdbc:postgresql://b27dbvl007.preprod.local:5432/fpinfo-historikk-preprod
