--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -29,6 +29,9 @@ server:
     use-forward-headers: true
 
 spring:
+   datasource:
+    hikari:
+      maximum-pool-size: 2
    jpa:
       hibernate:
          ddl-auto : none
