--- a/pom.xml
+++ b/pom.xml
@@ -16,9 +16,9 @@
 
 	<properties>
 		<oidc-spring-support.version>0.2.15</oidc-spring-support.version>
+		<springfox.version>2.9.2</springfox.version>
 		<timestamp>${maven.build.timestamp}</timestamp>
 		<maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
-		<springfox.version>2.9.2</springfox.version>
 	</properties>
 	<scm>
 		<connection>scm:git:https://github.com/navikt/fpinfo-bris.git</connection>
@@ -46,6 +46,16 @@
 		</dependencies>
 	</dependencyManagement>
 	<dependencies>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+            <version>${springfox.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+            <version>${springfox.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
