--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -11,6 +11,10 @@ spring.mvc.view.prefix: /WEB-INF/jsp/
 spring.mvc.view.suffix: .jsp
 spring:
    jpa:
+      show-sql: false
+      properties:
+         hibernate:
+            format_sql=false
       hibernate:
          ddl-auto: create
    flyway:
