added some security

--- a/src/main/java/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/java/META-INF/additional-spring-configuration-metadata.json
@@ -5,7 +5,7 @@
     "description": "The http proxy to be used"
   },
   {
-    "name": "kafka.topic",
+    "name": "no.nav.foreldrepenger.historikk.kafka.meldinger.topic",
     "type": "java.lang.String",
     "description": "The topic to consume from"
   }
