protect one endpoint

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,7 +3,7 @@ http:
 
 no.nav.foreldrepenger.historikk:
    oppslag:
-      enabled: false
+      enabled: true
    kafka:
       meldinger:
          topic: fpinfo-historikk
