--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,12 @@
 http:
    proxy: http://webproxy-nais.nav.no:8088
 
+no.nav.security.oidc :
+    issuers :  selvbetjening
+    issuer.selvbetjening :
+       discoveryurl : Set from FASIT
+       accepted_audience : <Set from FASIT>
+       
 no.nav.foreldrepenger.historikk:
    oppslag:
       enabled: true
