--- a/nais.yaml
+++ b/nais.yaml
@@ -26,6 +26,14 @@ resources:
       memory: 1536Mi
 fasitResources:
   used:
+    - alias: aad_b2c_clientid
+      resourceType: credential
+      propertyMap:
+        username: NO_NAV_SECURITY_OIDC_ISSUER_SELVBETJENING_ACCEPTEDAUDIENCE
+    - alias: aad_b2c_discovery
+      resourceType: baseurl
+      propertyMap:
+         url: NO_NAV_SECURITY_OIDC_ISSUER_SELVBETJENING_DISCOVERYURL
     - alias: srvfpinfo-historikk
       resourceType: credential
       propertyMap:
