--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -1,3 +1,10 @@
+no.nav.security.oidc :
+    issuers: selvbetjening
+    issuer:
+       selvbetjening.discoveryurl: http://metadata
+       selvbetjening.accepted_audience: aud-localhost
+       selvbetjening.cookie_name: localhost-idtoken
+
 management:
    endpoints:
       web:
@@ -7,8 +14,6 @@ management:
      health:
         show-details: always
 
-spring.mvc.view.prefix: /WEB-INF/jsp/
-spring.mvc.view.suffix: .jsp
 spring:
    jpa:
       show-sql: false
