--- a/nais.yaml
+++ b/nais.yaml
@@ -30,14 +30,15 @@ fasitResources:
     - alias: aad_b2c_clientid
       resourceType: credential
       propertyMap:
-        username: NO_NAV_SECURITY_OIDC_ISSUER_SELVBETJENING_ACCEPTEDAUDIENCE
+        username: no_nav_security_oidc_issuer_selvbetjening_acceptedaudience
     - alias: aad_b2c_discovery
       resourceType: baseurl
       propertyMap:
-         url: NO_NAV_SECURITY_OIDC_ISSUER_SELVBETJENING_DISCOVERYURL
+         url: no_nav_security_oidc_issuer_selvbetjening_discoveryurl
     - alias: srvfpinfo-historikk
       resourceType: credential
       propertyMap:
+        username: kafka_username
         password: kafka_password
     - alias : FPINFOHISTORIKK_PROPERTIES
       resourceType: applicationProperties
