--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -39,6 +39,10 @@ server:
     use-forward-headers: true
 
 spring:
+   cache :
+      cache-names : aktør
+      caffeine:
+        spec: maximumSize=100,expireAfterAccess=3600s
    datasource:
      hikari:
        maximum-pool-size: 2
