--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -23,7 +23,7 @@ spring:
       consumer:
          enable-auto-commit: false
          bootstrap-servers: localhost:9092
-         group-id: group_id
+         group-id: group_id1
          auto-offset-reset: earliest
          key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
          value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
