baselineOnMigrate for now

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -50,7 +50,8 @@ spring:
       hibernate:
          ddl-auto : none
    flyway:
-      enabled : true    
+      baselineOnMigrate: true
+      enabled: true    
    application:
       name: fpinfo-historikk
    jackson:
