--- a/src/main/resources/application-preprod.yaml
+++ b/src/main/resources/application-preprod.yaml
@@ -6,7 +6,10 @@ management:
    endpoint:
       health:
          show-details: always
-         
+
+dokarkiv:
+   service: http://dokarkiv-q1
+            
 spring:
    http:
       log-request-details: true
