--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -6,7 +6,9 @@ management:
    endpoint:
      health:
         show-details: always
-
+kafka :
+   username: username
+   password: password
 spring:
    jpa:
       show-sql: false
