--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -40,7 +40,7 @@ server:
 
 spring:
    cache :
-      cache-names : aktør
+      cache-names : aktør,sts
       caffeine:
         spec: maximumSize=100,expireAfterAccess=3600s
    datasource:
