respect disabled flag

--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -6,6 +6,10 @@ management:
    endpoint:
      health:
         show-details: always
+        
+sts.enabled: false
+historikk.oppslag.enabled: false
+dokarkiv.enabled: false        
 kafka :
    username: username
    password: password
