--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -29,7 +29,7 @@ spring:
       consumer:
          enable-auto-commit: false
          bootstrap-servers: localhost:9092
-         group-id: group_id1
+         group-id: group_id
          
          auto-offset-reset: earliest
          key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
