--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,5 +16,12 @@ jobs:
             - ~/.m2
           key: fpinfo-historikk-{{ checksum "pom.xml" }}
        - run: mvn test 
-       - store_test_results: 
-          path: target/surefire-reports
+          name: Save test results
+          command: |
+            mkdir -p ~/test-results/junit/
+            find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} ~/test-results/junit/ \;
+          when: always
+       - store_test_results:
+          path: ~/test-results
+       - store_artifacts:
+          path: ~/test-results/junit    
