--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,8 +16,7 @@ jobs:
             - ~/.m2
           key: fpinfo-historikk-{{ checksum "pom.xml" }}
        - run: mvn test 
-           name: Save test results
-           command: |
+       - run:    command: |
              mkdir -p ~/test-results/junit/
              find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} ~/test-results/junit/ \;
            when: always
