--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,18 +1,8 @@
 version: 2
 orbs:
   nais: navikt/nais-deployment:1.1.1
-  workflow:
-  deploy-docker-and-nais:
-    jobs:
-      - nais/deploy:
-          context: NAIS deployment
-          repo: navikt/fpinfo-historikk
-          image: navikt/fpinfo-historikk
-          github-app-id: 20250
-          nais-template: nais.yaml
-          environment: dev-fss
-          team: teamforeldrepenger
-jobs:
+  
+ jobs:
    build:
      working_directory: ~/fpinfo-historikk 
      docker:
@@ -40,6 +30,18 @@ jobs:
           path: ~/test-results
 
        - store_artifacts:
-          path: ~/test-results/junit 
-       - deploy-docker-and-nais   
+          path: ~/test-results/junit  
           
+ workflow:
+  deploy-docker-and-nais:
+    jobs:
+      - nais/deploy:
+          context: NAIS deployment
+          repo: navikt/fpinfo-historikk
+          image: navikt/fpinfo-historikk
+          github-app-id: 20250
+          nais-template: nais.yaml
+          environment: dev-fss
+          team: teamforeldrepenger
+          requires:
+            - build
