--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,8 +31,9 @@ jobs:
 
        - store_artifacts:
           path: ~/test-results/junit  
-         
           
+       - nais/docker-deploy:	
+          image: navikt/fpinfo-historikk
 workflows:
    version: 2
    deploy-nais:
@@ -40,7 +41,7 @@ workflows:
       - build:
           context: NAIS deployment
       - nais/deploy:
-          build-and-push-docker-image: true
+          build-and-push-docker-image: false
           context: NAIS deployment
           repo: navikt/fpinfo-historikk
           image: navikt/fpinfo-historikk
